// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EmptyDestinations /> should render empty destinations message 1`] = `
<div
  class="euiEmptyPrompt"
  style="max-width:45em"
>
  <span
    class="euiTextColor euiTextColor--subdued"
  >
    <div
      class="euiText euiText--medium"
    >
      <div
        class="euiText euiText--medium"
      >
        <p>
          There are no existing destinations.
        </p>
      </div>
    </div>
  </span>
</div>
`;

exports[`<EmptyDestinations /> should render no results for filter criteria 1`] = `
<div
  class="euiEmptyPrompt"
  style="max-width:45em"
>
  <span
    class="euiTextColor euiTextColor--subdued"
  >
    <div
      class="euiText euiText--medium"
    >
      <div
        class="euiText euiText--medium"
      >
        <p>
          There are no destinations matching your applied filters. Reset your filters to view all destinations.
        </p>
      </div>
    </div>
  </span>
  <div
    class="euiSpacer euiSpacer--l"
  />
  <button
    class="euiButton euiButton--primary euiButton--fill"
    type="button"
  >
    <span
      class="euiButtonContent euiButton__content"
    >
      <span
        class="euiButton__text"
      >
        Reset filters
      </span>
    </span>
  </button>
</div>
`;
